--- a/league-snooper/src/content/Homepage/HomePage.scss
+++ b/league-snooper/src/content/Homepage/HomePage.scss
@@ -12,7 +12,7 @@
     flex-direction: column;
     align-items: center;
 
-    img{
+    #logo{
         width: 45vw;
         margin: 20vh 0 5vh 0;
     }
